tests/snapshots/formats__sas-xport__survey-v5.xpt.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ survey-v5.xpt — SAS transport (XPORT v5), 1 member: SURVEY  [0x0+0x5f0]
  ▾ Library header — SAS 6.06 on bsd4.2, 07OCT26:11:00:00  [0x0+0xf0]
      Header record  [0x0+0x50]
      SAS symbol 1: "SAS"  [0x50+0x8]
      SAS symbol 2: "SAS"  [0x58+0x8]
      Library: "SASLIB"  [0x60+0x8]
      SAS version: "6.06"  [0x68+0x8]
      Operating system: "bsd4.2"  [0x70+0x8]
      Created: "07OCT26:11:00:00"  [0x90+0x10]
      Modified: "07OCT26:11:00:00"  [0xa0+0x10]
  ▾ Member SURVEY — 4 variables × 5 observations, "fillyfoal survey"  [0xf0+0x500]
    ▾ Descriptors
        Member header  [0xf0+0x50]
        Descriptor header  [0x140+0x50]
        Data set name: "SURVEY"  [0x198+0x8]
        SAS version: "6.06"  [0x1a8+0x8]
        Operating system: "bsd4.2"  [0x1b0+0x8]
        Created: "07OCT26:11:00:00"  [0x1d0+0x10]
        Modified: "07OCT26:11:00:00"  [0x1e0+0x10]
        Label: "fillyfoal survey"  [0x200+0x28]
        Type: ""  [0x228+0x8]
        Namestr header: 4  [0x230+0x50]
        Observation header  [0x4b0+0x50]
    ▾ Variables — 4 variables
      ▾ ID — numeric(8), "Respondent"  [0x280+0x8c]
          Type: "numeric"  [0x280+0x2]
          Length: 8  [0x284+0x2]
          Name: "ID"  [0x288+0x8]
          Label: "Respondent"  [0x290+0x28]
          Format: ""  [0x2b8+0x8]
          Position: 0  [0x2d4+0x4]
      ▾ NAME — character(22), "Full name"  [0x30c+0x8c]
          Type: "character"  [0x30c+0x2]
          Length: 22  [0x310+0x2]
          Name: "NAME"  [0x314+0x8]
          Label: "Full name"  [0x31c+0x28]
          Format: ""  [0x344+0x8]
          Position: 8  [0x360+0x4]
      ▾ SCORE — numeric(8), "Test score"  [0x398+0x8c]
          Type: "numeric"  [0x398+0x2]
          Length: 8  [0x39c+0x2]
          Name: "SCORE"  [0x3a0+0x8]
          Label: "Test score"  [0x3a8+0x28]
          Format: ""  [0x3d0+0x8]
          Position: 30  [0x3ec+0x4]
      ▾ BORN — numeric(8), DATE, "Date of birth"  [0x424+0x8c]
          Type: "numeric"  [0x424+0x2]
          Length: 8  [0x428+0x2]
          Name: "BORN"  [0x42c+0x8]
          Label: "Date of birth"  [0x434+0x28]
          Format: "DATE"  [0x45c+0x8]
          Position: 38  [0x478+0x4]
    ▾ Observations — 5 rows × 46 bytes  [0x500+0xf0]
      ▾ Observation 1 — ID=1, NAME="Alice", SCORE=12.5, BORN=1980-01-15  [0x500+0x2e]
          ID: 1  [0x500+0x8]
          NAME: "Alice"  [0x508+0x16]
          SCORE: 12.5  [0x51e+0x8]
          BORN: 1980-01-15 00:00:00 UTC — 1980-01-15  [0x526+0x8]
      ▾ Observation 2 — ID=2, NAME="Bob", SCORE=-99, BORN=1999-12-31  [0x52e+0x2e]
          ID: 2  [0x52e+0x8]
          NAME: "Bob"  [0x536+0x16]
          SCORE: -99  [0x54c+0x8]
          BORN: 1999-12-31 00:00:00 UTC — 1999-12-31  [0x554+0x8]
      ▾ Observation 3 — ID=3, NAME="Cedomir", SCORE=., BORN=.  [0x55c+0x2e]
          ID: 3  [0x55c+0x8]
          NAME: "Cedomir"  [0x564+0x16]
          SCORE: "." — missing  [0x57a+0x8]
          BORN: "." — missing  [0x582+0x8]
      ▾ Observation 4 — ID=4, NAME="", SCORE=7.25, BORN=1960-01-01  [0x58a+0x2e]
          ID: 4  [0x58a+0x8]
          NAME: ""  [0x592+0x16]
          SCORE: 7.25  [0x5a8+0x8]
          BORN: 1960-01-01 00:00:00 UTC — 1960-01-01  [0x5b0+0x8]
      ▾ Observation 5 — ID=5, NAME="Eve with a longer name", SCORE=10000000000, BORN=2024-02-29  [0x5b8+0x2e]
          ID: 5  [0x5b8+0x8]
          NAME: "Eve with a longer name"  [0x5c0+0x16]
          SCORE: 10000000000  [0x5d6+0x8]
          BORN: 2024-02-29 00:00:00 UTC — 2024-02-29  [0x5de+0x8]
